macros/tests/ui/invalid-item.stderr
error: #[async_ffi] expects an `async fn`
 --> tests/ui/invalid-item.rs:4:5
  |
4 | pub fn not_async() {}
  |     ^^

error: #[async_ffi] does not support `self` parameter
 --> tests/ui/invalid-item.rs:8:21
  |
8 |     async fn method(&self);
  |                     ^

error: #[async_ffi] does not support `self` parameter
  --> tests/ui/invalid-item.rs:13:21
   |
13 |     async fn method(&self) {}
   |                     ^
